syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.luiz";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.luiz;

import "google/protobuf/timestamp.proto";

service KeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerRemoveGrpcService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerCarregaGrpcService {
  rpc carrega(CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}

service KeyManagerListaGrpcService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

//Enum para o tipo de chave a ser cadastrado
//UNKNOWN é para não deixarmos o default como algum tipo valido do nosso sistema
enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

//Enum para o tipo de conta a ser
//UNKNOWN é para não deixarmos o default como algum tipo valido do nosso sistema
enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

//Requisitos para registrar uma chave pix
message RegistraChavePixRequest {
  string clienteId        = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

//resposta que deve ser retornado pelo sistema
message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}

//Requisitos para remover  uma chave pix
message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId     = 2;
}

//resposta que deve ser retornado pelo sistema
message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}

//Requisitos para carregar uma chave pix
message CarregaChavePixRequest {
  // mensagem aninhada
  message FiltroPorPixId{
    string clienteId = 1;
    string pixId     = 2;
  }

  // oneof - nunca é pesquisado pelos dois campos
  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave   = 2;
  }
}

//resposta que deve ser retornado pelo sistema
message CarregaChavePixResponse {

  message ChavePix {

    message ContaInfo {
      TipoDeConta tipo     = 1;
      string instituicao   = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }

    TipoDeChave tipo        = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

/**
 * Lista chaves
 */
message ListaChavesPixRequest {
  string clienteId = 1;
}

message ListaChavesPixResponse {

  message ChavePix {
    string pixId            = 1;
    TipoDeChave tipo        = 2;
    string chave            = 3;
    TipoDeConta tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId         = 1;
  repeated ChavePix chaves = 2;
}